--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mogyoródi Balázs</title>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="main.js" type="module"></script>
@@ -16,7 +16,8 @@
     <main>
         <header>
             
-            <h1>Gyalog harc</h1>
+            <h1>Mogyoródi Balázs</h1>
+
         </header>
         <article>
 
